src/main/java/com/example/prac/error/ex/ExceptionApi404.java
package com.example.prac.error.ex;

public class ExceptionApi404 extends RuntimeException {
    public ExceptionApi404(String message) {
        super(message);
    }
}
